--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ html {
   margin-top: 60px;
   margin-right: 2px;
   line-height: 2;
-  color: white;
+  color: #844685;
   font-size: 19px;
   font-weight: 600;
 }
